# smart-maintenance-suite

./: .dockerignore  .gitignore  10-generate_backend_coverage.bat  10-generate_backend_coverage.sh  11-run-frontend-coverage.bat  11-run-frontend-coverage.sh  4-install-wsl-environment.sh  7-build-app-linux.sh  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-project.bat  CMakeLists.txt  COVERAGE_REPORT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  DoxyfileLibLinux  DoxyfileLibWin  DoxyfileTestLinux  DoxyfileTestWin  README.md  alert_service.c.gcov  auth_handler.c.gcov  bst.c.gcov  db_connection.c.gcov  docker-compose.yml  fault_handler.c.gcov  graph.c.gcov  heap.c.gcov  http_server.c.gcov  interview_master_notes.md  interview_notes.docx  interview_notes.html  inventory.csv  inventory_handler.c.gcov  inventory_service.c.gcov  jwt.c.gcov  machine_handler.c.gcov  machine_service.c.gcov  maintenance.csv  (+36 more)
build_backend_tests/: test_alert_service_real-alert_service.gcda  test_alert_service_real-alert_service.gcno  test_alert_service_real-test_alert_service_real.gcda  test_alert_service_real-test_alert_service_real.gcno  test_api-alert_service.gcda  test_api-alert_service.gcno  test_api-auth_handler.gcda  test_api-auth_handler.gcno  test_api-db_connection.gcda  test_api-db_connection.gcno  test_api-encryption.gcno  test_api-fault_handler.gcda  test_api-fault_handler.gcno  test_api-http_server.gcda  test_api-http_server.gcno  test_api-inventory_handler.gcda  test_api-inventory_handler.gcno  test_api-inventory_service.gcda  test_api-inventory_service.gcno  test_api-jwt.gcda  test_api-jwt.gcno  test_api-logger.gcno  test_api-memory.gcno  (+184 more)
src/tests/smart_maintenance_suite_app/: CMakeLists.txt  smart_maintenance_suite_app_test.cpp
(+1429 files in other folders)
